feat: improve data return in GetUser, GetUsers, UpdateUsers, and Login
