# docs/swagger.yaml
@@ -19,7 +19,7 @@ definitions:
       token:
         type: string
       user:
-        $ref: '#/definitions/models.User'
+        $ref: '#/definitions/dto.UserResponse'
     type: object
   dto.SignupRequest:
     properties:
@@ -57,45 +57,40 @@ definitions:
   dto.UpdateUserRequest:
     properties:
       confirm_password:
+        example: newpassword123
         type: string
       email:
+        example: johndoe@example.com
         type: string
       name:
+        example: John Doe
         type: string
       password:
+        example: newpassword123
+        type: string
+    type: object
+  dto.UserResponse:
+    properties:
+      created_at:
+        example: "2024-03-24T15:30:00Z"
+        type: string
+      email:
+        example: tiago@example.com
+        type: string
+      id:
+        example: 1
+        type: integer
+      name:
+        example: Tiago Duarte
+        type: string
+      user_type:
+        example: USER
         type: string
     type: object
   helper.ErrorResponse:
     properties:
       message:
         type: string
-    type: object
-  models.User:
-    properties:
-      created_at:
-        type: string
-      email:
-        type: string
-      id:
-        type: integer
-      name:
-        maxLength: 100
-        minLength: 2
-        type: string
-      password:
-        minLength: 6
-        type: string
-      refresh_token:
-        type: string
-      token:
-        type: string
-      user_type:
-        type: string
-    required:
-    - email
-    - name
-    - password
-    - user_type
     type: object
 info:
   contact: {}
@@ -137,40 +132,7 @@ paths:
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
       summary: User Login
-  /users:
-    get:
-      consumes:
-      - application/json
-      description: This endpoint retrieves a list of users with pagination support.
-      parameters:
-      - default: 1
-        description: Page number
-        in: query
-        name: page
-        type: integer
-      - default: 10
-        description: Number of users per page
-        in: query
-        name: limit
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: List of users
-          schema:
-            items:
-              $ref: '#/definitions/models.User'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helper.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helper.ErrorResponse'
-      summary: Get users with pagination
+  /signup:
     post:
       consumes:
       - application/json
@@ -207,6 +169,40 @@ paths:
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
       summary: Create a new user
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: This endpoint retrieves a list of users with pagination support.
+      parameters:
+      - default: 1
+        description: Page number
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: Number of users per page
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of users
+          schema:
+            items:
+              $ref: '#/definitions/dto.UserResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      summary: Get users with pagination
   /users/{id}:
     delete:
       consumes:
@@ -224,9 +220,7 @@ paths:
         "200":
           description: User deleted successfully
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/dto.SuccessMessage'
         "400":
           description: Bad Request
           schema:
@@ -264,7 +258,7 @@ paths:
         "200":
           description: User data
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/dto.UserResponse'
         "401":
           description: ErrUnauthorized
           schema:
@@ -300,7 +294,7 @@ paths:
         "200":
           description: Updated user data
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/dto.UserResponse'
         "400":
           description: Bad Request
           schema:
