# dto/updateUserRequest.go
@@ -1,8 +1,0 @@
-package dto
-
-type UpdateUserRequest struct {
-	Name           string `json:"name"`
-	Email          string `json:"email"`
-	Password       string `json:"password"`
-	ConfirmPassword string `json:"confirm_password"`
-}
