# routes/authRouter.go
@@ -6,6 +6,6 @@ import(
 )
 
 func AuthRoutes(incomingRoutes *gin.Engine){
- 	incomingRoutes.POST("users/signup", controller.Signup)
-	incomingRoutes.POST("users/login", controller.Login)
+ 	incomingRoutes.POST("/signup", controller.Signup)
+	incomingRoutes.POST("/login", controller.Login)
 }
